Migrate integration tests to NIO2 Path API (#11364)
Migrate Maven Integration Tests from java.io.File to NIO2
java.nio.file.Path API, making Path-based methods the primary API
while maintaining familiar method names.

Infrastructure:
- Verifier: Path-based overloads, NIO2 file operations, custom
  deleteDirectoryRecursively using Files.walk(), InvalidPathException
  fallback to File API for Windows trailing-space paths
- AbstractMavenIntegrationTestCase: extractResources() returns Path,
  strips leading '/' for correct Path.resolve() behavior
- ItUtils: centralized FileUtils wrappers (copyDirectoryStructure,
  deleteDirectory, createFile, lastModified)
- HttpServer: source(Path) overload for file-based serving

Test migration:
- 735+ integration test files migrated to Path-based API
- File -> Path, new File(dir, sub) -> dir.resolve(sub)
- getAbsolutePath() -> toString(), FileReader -> Files.newBufferedReader
- Files.deleteIfExists() where old File.delete() was lenient
- Platform-specific fixes: Windows drive-relative paths (File.separator
  prefix for subpath), Unix Path.subpath() skip

New tests:
- VerifierNIO2Test, NIO2MigrationVerificationTest,
  AbstractMavenIntegrationTestCaseNIO2Test

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>